# hobbit

./: '  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.cpp
.cache/clangd/index/: entry.cpp.B7175837EC0CB9B8.idx  entry.hpp.AE3FB42C665606D6.idx  json_repository.cpp.54C03FB315A58182.idx  main.cpp.8F17CE9868102DB4.idx  user.cpp.DB22A7812946D229.idx  user.hpp.E79728F48D99224D.idx
.github/: ci.yml
.github/workflows/: ci.yml
common/: consts.hpp
include/: day.hpp  day_part.hpp  entry.hpp  occurence.hpp  user.hpp
src/: day.cpp  entry.cpp  main.cpp  user.cpp
src/core/: CMakeLists.txt
src/core/include/: app.hpp  entry_service.hpp  task_manager.hpp  task_service.hpp  uuid.hpp
src/core/src/: app.cpp  entry_service.cpp  task_manager.cpp  task_service.cpp
src/models/: CMakeLists.txt
src/models/include/: date.hpp  datetime.hpp  deadline.hpp  duration.hpp  duration_parser.hpp  duration_units.hpp  duration_units_parser.hpp  entry.hpp  interval.hpp  occurence.hpp  occurrence.hpp  recurrence.hpp  recurrence_patterns.hpp  recurrent_task.hpp  singular_task.hpp  task.hpp  task_data.hpp  task_override.hpp  task_series.hpp  time.hpp  user.hpp  week.hpp  weekdays.hpp
src/models/src/: date.cpp  datetime.cpp  deadline.cpp  duration.cpp  duration_parser.cpp  duration_units.cpp  duration_units_parser.cpp  entry.cpp  interval.cpp  occurence.cpp  occurrence.cpp  recurrence.cpp  recurrence_patterns.cpp  recurrent_task.cpp  singular_task.cpp  task.cpp  task_data.cpp  task_override.cpp  task_series.cpp  time.cpp  user.cpp  week.cpp  weekdays.cpp
src/repositories/: CMakeLists.txt
src/repositories/implementations/: json_repository.hpp
src/repositories/implementations/include/: json_repository.hpp
src/repositories/interfaces/: repository.hpp
src/storage/: CMakeLists.txt  storage_engine.hpp
src/storage/implementations/include/: json_storage.hpp  json_storage_engine.hpp
src/storage/implementations/src/: json_storage.cpp  json_storage_engine.cpp
src/storage/interfaces/: storage.hpp  storage_engine.hpp
src/ui/: CMakeLists.txt
src/ui/implementations/include/: tui.hpp
src/ui/implementations/src/: tui.cpp
src/ui/implementations/tui/: CMakeLists.txt
src/ui/implementations/tui/components/include/: entry_component.hpp  entry_form_component.hpp  entry_list_component.hpp  interval_input_component.hpp  orchestrator_component.hpp  task_component.hpp  task_form_component.hpp  task_list_component.hpp
src/ui/implementations/tui/components/src/: entry_component.cpp  entry_form_component.cpp  entry_list_component.cpp  interval_input_component.cpp  orchestrator_component.cpp  task_component.cpp  task_form_component.cpp  task_list_component.cpp
src/ui/implementations/tui/include/: tui.hpp
src/ui/implementations/tui/src/: tui.cpp
src/ui/interfaces/: ui.hpp
src/util/: CMakeLists.txt
src/util/include/: iso8601_validator.hpp
src/util/src/: iso8601_validator.cpp
tests/: CMakeLists.txt
tests/unit/: test_entry_service.cpp  test_first.cpp  test_json_repositories.cpp  test_json_storage_engine.cpp  test_models.cpp  test_task_service.cpp
tests/unit/models/: test_date.cpp  test_datetime.cpp  test_deadline.cpp  test_duration.cpp  test_duration_parser.cpp  test_duration_units.cpp  test_duration_units_parser.cpp  test_entry.cpp  test_interval.cpp  test_occurrence.cpp  test_recurrence_patterns.cpp  test_singular_task.cpp  test_task.cpp  test_task_data.cpp  test_task_series.cpp  test_time.cpp  test_user.cpp  test_weekdays.cpp
tests/unit/util/include/: fake_model.hpp  fake_storage_engine.hpp
tests/unit/util/src/: fake_model.cpp  fake_storage_engine.cpp
